Add environment variable support and remove unused dependencies
- Load environment variables from .env file and set PROVISIONING_SERVICE_HOST with a default value.
- Update API endpoint URLs to use the PROVISIONING_SERVICE_HOST variable.
- Include step order and status in process payloads for Docker compose and KAI service configuration.
- Remove unused dependencies: pandas, python-dateutil, pytz, and six from the project.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -37,6 +37,12 @@ services:
       - orbit-text2sql-agent
     env_file:
       - .env.orbit
+  orbit-redis:
+    image: redis:7-alpine
+    container_name: orbit-redis
+    ports:
+      - "6379:6379"
+    command: ["redis-server", "--bind", "0.0.0.0", "--protected-mode", "no"]
 
 networks:
   default:
